--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -55,6 +55,8 @@
       <li>
         <form action="/logout" method="POST">`
           <button type="submit">Logout</button>
+
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
         </form>
       </li>
     <% } else { %>
