--- a/views/admin/manage-product.ejs
+++ b/views/admin/manage-product.ejs
@@ -21,6 +21,8 @@
           <textarea id="description" name="description" required><% if (edit) {%><%= product.description %><% } %></textarea>
         </div>
         <button type="submit"><% if (edit) { %>Edit Product<% } else { %>Add Product<% } %></button>
+
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
       </form>
     </main>
   </body>
