--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -24,6 +24,8 @@
             <form action="/admin/delete-product" method="post" >
               <input type="hidden" name="_id" value="<%= product._id %>"/>
               <button type="submit">Delete</button>
+
+              <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             </form>
           </div>
         <% } %>
